<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/guide_gather_bg_f3" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/guide_gather_info_title" />
    <FrameLayout android:id="@id/fl_gather_birthed_prince" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginTop="70.0dip" android:layout_alignParentLeft="true">
        <TextView android:textSize="16.0sp" android:textColor="@color/guide_gather_red" android:gravity="center_horizontal" android:id="@id/tv_gather_birthed_prince" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/guide_gather_birthed_boy_str" android:drawableTop="@drawable/guide_gather_prince" android:drawablePadding="11.0dip" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_gather_birthed_prince_bg" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/guide_gather_chosen_light" />
        <ImageView android:layout_gravity="bottom|center|right" android:id="@id/iv_gather_birthed_prince_select" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:src="@drawable/guide_gather_checked" />
    </FrameLayout>
    <FrameLayout android:id="@id/fl_gather_birthed_princess" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70.0dip" android:layout_marginRight="60.0dip" android:layout_alignParentRight="true">
        <TextView android:textSize="16.0sp" android:textColor="@color/guide_gather_red" android:gravity="center_horizontal" android:id="@id/tv_gather_birthed_princess" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/guide_gather_birthed_girl_str" android:drawableTop="@drawable/guide_gather_princess" android:drawablePadding="11.0dip" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_gather_birthed_princess_bg" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/guide_gather_chosen_light" />
        <ImageView android:layout_gravity="bottom|center|right" android:id="@id/iv_gather_birthed_princess_select" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:src="@drawable/guide_gather_checked" />
    </FrameLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/rl_gather_birthed_birthdate" android:background="@drawable/act_guide_gather_info_bg" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:focusable="true" android:layout_width="272.0dip" android:layout_height="39.0dip" android:layout_marginTop="28.0dip" android:layout_below="@id/fl_gather_birthed_princess" android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp" android:textColor="@color/guide_gather_gray_99" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/guide_gather_birthed_birthdate_str" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <EditText android:textSize="12.0sp" android:textColor="@color/guide_gather_gray_33" android:textColorHint="@color/guide_gather_gray_cd" android:gravity="center|right" android:id="@id/et_gather_birthed_birthdate" android:background="@null" android:focusable="false" android:layout_width="wrap_content" android:layout_height="fill_parent" android:hint="@string/guide_gather_birthed_birthdate_hint_str" android:cursorVisible="false" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/rl_gather_birthed_babyname" android:background="@drawable/act_guide_gather_info_bg" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="272.0dip" android:layout_height="39.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/rl_gather_birthed_birthdate" android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp" android:textColor="@color/guide_gather_gray_99" android:id="@id/tv_gather_birthed_babyname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/guide_gather_birthed_babyname_str" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <EditText android:textSize="12.0sp" android:textColor="@color/guide_gather_gray_33" android:textColorHint="@color/guide_gather_gray_cd" android:gravity="center|right" android:id="@id/et_gather_birthed_babyname" android:background="@null" android:layout_width="wrap_content" android:layout_height="fill_parent" android:maxWidth="180.0dip" android:hint="@string/guide_gather_birthed_babyname_tip_str" android:singleLine="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <Button android:enabled="false" android:textSize="14.0sp" android:textColor="@drawable/act_text_color" android:id="@id/btn_gather_confirm" android:background="@drawable/act_btn_bg_40" android:layout_width="250.0dip" android:layout_height="39.0dip" android:layout_marginTop="50.0dip" android:text="@string/guide_gather_confirm_str" android:layout_below="@id/rl_gather_birthed_babyname" android:layout_centerHorizontal="true" />
</RelativeLayout>