<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="325.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_box_ball" android:background="@color/white" android:layout_width="290.0dip" android:layout_height="wrap_content" android:layout_marginTop="-5.0dip" android:layout_below="@id/tv_title" android:layout_centerInParent="true">
            <TextView android:textSize="16.0sp" android:textColor="@color/black" android:layout_gravity="center" android:id="@id/tv_success_gift" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/register_gift_bag" />
            <ImageView android:layout_gravity="center" android:id="@id/iv_newuser_box" android:layout_width="190.0dip" android:layout_height="150.0dip" android:layout_marginTop="10.0dip" android:src="@drawable/register_success_gift" />
            <Button android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/btn_get_gift" android:background="@drawable/btn_register_gift" android:layout_width="250.0dip" android:layout_height="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/register_get_gift" />
        </LinearLayout>
        <TextView android:textSize="20.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_title" android:background="@drawable/register_success_titile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-10.0dip" android:text="@string/register_success_toast" android:layout_below="@id/iv_gift_close" />
        <ImageView android:id="@id/iv_gift_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:src="@drawable/goodsdetail_close" android:layout_alignParentRight="true" />
    </RelativeLayout>
</RelativeLayout>