<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/rl_gather_state_select" android:background="@color/guide_gather_bg_f3" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/guide_gather_info_title" />
    <TextView android:textSize="16.0sp" android:textColor="@color/guide_gather_red" android:id="@id/tv_gather_state_select_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="86.0dip" android:text="@string/guide_gather_state_select_tip_str" android:layout_centerHorizontal="true" />
    <FrameLayout android:id="@id/fl_gather_state_pregnanted" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:layout_below="@id/tv_gather_state_select_tip" android:layout_centerHorizontal="true">
        <TextView android:textSize="16.0sp" android:textColor="@color/guide_gather_red" android:gravity="center_horizontal" android:id="@id/tv_gather_state_select_p1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/guide_gather_pregnanted_str" android:drawableTop="@drawable/guide_gather_pregnanted_baby_icon" android:drawablePadding="11.0dip" />
        <ImageView android:layout_gravity="bottom|center|right" android:id="@id/iv_gather_state_select_p1" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:src="@drawable/guide_gather_checked" />
    </FrameLayout>
    <FrameLayout android:id="@id/fl_gather_state_prepregnant" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="182.0dip" android:layout_below="@id/tv_gather_state_select_tip" android:layout_alignParentLeft="true">
        <TextView android:textSize="16.0sp" android:textColor="@color/guide_gather_red" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/guide_gather_prepregnant_str" android:drawableTop="@drawable/guide_gather_prepregnant_baby_icon" android:drawablePadding="11.0dip" />
        <ImageView android:layout_gravity="bottom|center|right" android:id="@id/iv_gather_state_select_p2" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:src="@drawable/guide_gather_checked" />
    </FrameLayout>
    <FrameLayout android:id="@id/fl_gather_state_birthed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="182.0dip" android:layout_marginRight="30.0dip" android:layout_below="@id/tv_gather_state_select_tip" android:layout_alignParentRight="true">
        <TextView android:textSize="16.0sp" android:textColor="@color/guide_gather_red" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/guide_gather_birthed_str" android:drawableTop="@drawable/guide_gather_birthed_baby_icon" android:drawablePadding="11.0dip" />
        <ImageView android:layout_gravity="bottom|center|right" android:id="@id/iv_gather_state_select_p3" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:src="@drawable/guide_gather_checked" />
    </FrameLayout>
</RelativeLayout>